--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ header img {
     height: 300px;
     position: absolute;
     top: 370px;
-    background-image: url(img/menu.png);
+    background-image: url(img/bibliomenu.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
